; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_drm_ctx.c_gfx_ctx_drm_egl_fill_attribs.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_drm_ctx.c_gfx_ctx_drm_egl_fill_attribs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@drm_api = common dso_local global i32 0, align 4
@EGL_NONE = common dso_local global i32 0, align 4
@EGL_CONTEXT_CLIENT_VERSION = common dso_local global i32 0, align 4
@EGL_CONTEXT_FLAGS_KHR = common dso_local global i32 0, align 4
@EGL_CONTEXT_MAJOR_VERSION_KHR = common dso_local global i32 0, align 4
@EGL_CONTEXT_MINOR_VERSION_KHR = common dso_local global i8* null, align 8
@EGL_CONTEXT_OPENGL_CORE_PROFILE_BIT_KHR = common dso_local global i32 0, align 4
@EGL_CONTEXT_OPENGL_DEBUG_BIT_KHR = common dso_local global i32 0, align 4
@EGL_CONTEXT_OPENGL_PROFILE_MASK_KHR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_5__*, i32*)* @gfx_ctx_drm_egl_fill_attribs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @gfx_ctx_drm_egl_fill_attribs(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @drm_api, align 4
  switch i32 %5, label %8 [
    i32 128, label %6
    i32 130, label %7
  ]

6:                                                ; preds = %2
  br label %9

7:                                                ; preds = %2
  br label %8

8:                                                ; preds = %2, %7
  br label %9

9:                                                ; preds = %8, %6
  %10 = load i32, i32* @EGL_NONE, align 4
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  ret i32* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
